# goth

./: LANGUAGE.md  LICENSE.md  LLM_SPEC.md  README.md
.github/workflows/: ci.yml  release.yml
benchmark/: BLIND_TEST.md  METRICS.md  run_tests.py
benchmark/prompts/: goth_json.md  goth_syntax.md  prompt_generator.py
benchmark/tests/: algorithms.json  basic.json  higher_order.json  io.json  numeric.json  recursion.json
crates/: Cargo.toml
crates/goth-ast/: Cargo.toml  README.md
crates/goth-cli/: Cargo.toml  README.md
crates/goth-eval/: Cargo.toml
crates/goth-eval/src/: error.rs  eval.rs  lib.rs  prim.rs  value.rs
crates/goth-mir/: Cargo.toml
crates/goth-mlir/: Cargo.toml
docs/: CLAUDE-SKILLS.md  GOTH-LANGUAGE-REFERENCE-v0.1.md  MLIR-IMPLEMENTATION-PLAN.md  SESSION-STATUS.md  web-interface.md
docs/future/: NATIVE-GOTH-SERVER.md
examples/: ansi_test.goth  genesis_pentagram.goth  math_comprehensive.goth  matmul.goth  number_analyzer.goth  test_hline.goth  tui_demo.goth  tui_simple.goth  tui_test.goth
examples/algorithms/: binary_search.goth  count_primes.goth  isPrime.goth  isqrt.goth  modpow.goth  nth_prime.goth
examples/basic/: abs.goth  add_one.goth  double.goth  identity.goth  is_even.goth  is_positive.goth  max_two.goth  min_two.goth  sign.goth  square.goth
examples/higher-order/: all_positive.goth  any_negative.goth  apply_twice.goth  compose.goth  count_if.goth  filter_positive.goth  fold_product.goth  fold_sum.goth  map_double.goth  pipeline.goth
stdlib/: canvas.goth  list.goth  string.goth  tui.goth
tests/: self_compile_test.sh
(+83 files in other folders)
